@@ -41,9 +41,18 @@
     op => [
       {in_array => $ops}
     ],
-    'sk1' => [
+    sk1 => [
       'safety_name'
     ],
+    so1 => [
+      'any'
+    ],
+    sk2 => [
+      'safety_name'
+    ],
+    so2 => [
+      'any'
+    ]
   ];
   my $vresult = $dbviewer->validator->validate($params, $rule);
   my $database = $vresult->data->{database};
@@ -97,16 +106,18 @@
   }
   
   # Order by
-  my $sort_key = $data->{'sk1'};
-  my $order_by = '';
-  if (defined $sort_key) {
-    $order_by = "order by $sort_key";
-    
-    my $order = param('so1') || '';
-    if ($order eq 'asc' || $order eq 'desc') {
-      $order_by .= " $order";
+  my @order_bys;
+  for my $num (1 .. 2) {
+    my $sort_key = $data->{"sk$num"};
+    if (defined $sort_key) {
+      my $column = "$sort_key";
+      
+      my $order = param("so$num") || '';
+      $order = '' unless $order eq 'desc';
+      push @order_bys, "$column $order";
     }
   }
+  my $order_by = @order_bys ? 'order by ' . join(',', @order_bys) : '';
 
   # Limit
   my $page = param('page') || 1;
@@ -202,9 +213,13 @@
       </div>
 
       <div class="label">Order</div>
-      <div class="form-inline" style="margin-bottom:10px">
+      <div class="form-inline" style="margin-bottom:1px">
         <%= select_field 'sk1' => [['---' => ''], sort @$header], style => "width:250px" %>
         <%= select_field 'so1' => [['---' => ''], 'asc', 'desc'], style => "width:130px" %>
+      </div>
+      <div class="form-inline" style="margin-bottom:10px">
+        <%= select_field 'sk2' => [['---' => ''], sort @$header], style => "width:250px" %>
+        <%= select_field 'so2' => [['---' => ''], 'asc', 'desc'], style => "width:130px" %>
       </div>
       <div>
         <span class="label">
