@@ -1,6 +1,7 @@
 0.18
-  - columns in select field is ordered.
-  - add in condtion.
+  - columns in select field is ordered in select page.
+  - add in condtion in select page.
+  - add order section in select page.
 0.17
   - catch up with Mojolicious 4.0
 0.16
